[package]
edition = "2021"
name = "msdsmchr"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = "4.0.1"
base64 = "0.13.0"
image = {version = "0.24.2", default-features = false, features = ["png"]}
imageproc = {version = "0.23.0", default-features = false, features = []}
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["json"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
harness = false
name = "benchmark"

[profile.release]
debug = true

# this will be removed once the changes are released
[patch.crates-io]
image = {git = "https://github.com/image-rs/image"}
imageproc = {git = "https://github.com/mat-1/imageproc"}

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
