[package]
edition = "2021"
name = "msdsmchr"
version = "1.0.0"

[dependencies]
actix-web = "4.4.0"
base64 = "0.21.5"
image = { version = "^0.24", default-features = false, features = ["png"] }
imageproc = { version = "0.23.0", default-features = false, features = [] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "benchmark"

[profile.release]
debug = true
